# fatty_acid_names_l10n

./: .typos.toml  Cargo.toml  README.md  TEMP.md  taplo.toml
.github/workflows/: cargo_machete.yml  pages.yml  rust.yml  typos.yml
_temp/aocs.org/: 1.md
_temp/aocs.org[1]/: aocs.org.ftl  aocs.org.toml  diacid.md
_temp/aocs.org[2]/0/: 0.md  2.md  me.md  see.md
_temp/aocs.org[2]/1/: 1.md  5-monoacid.md
_temp/en/fatty_acids/: ippras.ftl
aocs.org/: inchi.md
aocs.org/1/: 2.md  3-diacid.md  3-monoacid.md  4-monoacid.md  4-none.md
aocs.org/fatty_acids/: aocs.org.ext.ftl  aocs.org.ftl  byrdwell.com.ftl  ippras.toml
ftl/en/: aocs.org.ext.ftl  aocs.org.ftl  main.ftl  main.selectors.ftl
ftl/jp/: aocs.org.ftl
ftl/ru/: main.ftl
src/: lib.rs
src/egui/: mod.rs  names.rs  readable.rs  writable.rs
