[package]
name = "fatty_acids_l10n"
version = "0.1.1"
authors = ["Giorgi Vladimirovich Kazakov", "Roman Alexandrovich Sidorov"]
edition = "2024"

[dependencies]
egui = "0.34.1"
egui_l20n = { git = "https://github.com/kgv/egui_l20n", branch = "0.6", features = [
    "macros",
] }
thiserror = "2.0.18"

# const_format = { version = "0.2.36", features = ["fmt"] }

icu = "2.2.0"
icu_provider = "2.2.0"
icu_provider_adapters = "2.2.0"
icu_provider_fs = "2.2.0"
